# 3d-video-gen

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  USER_GUIDE.md  docker-compose.yml  package.json  vercel.json
.audit/: ACTION_PLAN.md  EXECUTIVE_SUMMARY.md  SUPABASE_KEY_ROTATION.md
bootstrap/: bootstrap.sh  create_kafka_topics.py  create_minio_bucket.py  env.py  requirements.txt  seed_db.py  smoke_test.py
db/: pyproject.toml
demo-service/: .dockerignore  Dockerfile  README.md  app.py  blender_entrypoint.py  director_ai.py  film_compiler.py  image_to_scene.py  requirements.txt  scene_builder.py  video_compose.py
k8s/: namespace.yaml
kafka_client/: pyproject.toml
public/: app.js  app_nav.css  calibration.js  cam-diag.html  config.js  dashboard_3d.css  dashboard_3d.js  draft_autosave.js  gaze_tracking.js  hand_filters.js  hand_tracking.js  head_tracking.js  help_modal.js  index.html  kaleido_shader.js  mapper.html  mapper.js  onee_filter.js  player.html  player.js  player_stereo.js  player_styles.css  player_styles.js  projection_mapping.js  quality.js  recent_projects.js  save_modal.js  splat_viewer.js  style.css  video_library.js  webcam.js
scripts/: deploy.sh  run_e2e.sh  run_local.sh  test_e2e.sh  wait-for-deps.sh
services/reward/: Dockerfile  pyproject.toml
services/reward/reward/: main.py  metrics.py
services/scene_generator/: Dockerfile  pyproject.toml
services/scene_generator/scene_generator/: generator.py  main.py
shared/: pyproject.toml
tests/: README.md  _assert.mjs  run_all.sh  test_backend.sh  test_calibration.mjs  (+8 more)
(+114 files in other folders)
