[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "studio-reward"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "studio-shared",
    "studio-db",
    "studio-kafka",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
]
