[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "studio-scene-generator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "studio-shared",
    "studio-db",
    "studio-kafka",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
]
